fixed letter-spacing

--- a/src/components/BoxGallery/BoxGallery.sass
+++ b/src/components/BoxGallery/BoxGallery.sass
@@ -64,7 +64,7 @@
       text-transform: uppercase
       line-height: 1
       font-weight: 700
-      letter-spacing: -5%
+      letter-spacing: -0.05em
       white-space: nowrap
       dominant-baseline: hanging
       @media (max-width: 375px)
