--- a/src/components/Hero/Hero.sass
+++ b/src/components/Hero/Hero.sass
@@ -24,7 +24,7 @@
     & h1
       line-height: 0.82
       & ~ h1 
-        letter-spacing: 0%
+        letter-spacing: -0.001em
         @media (max-width: 769px)
           align-self: center
           margin-right: -4rem
