--- a/src/components/SecondSection/SecondSection.sass
+++ b/src/components/SecondSection/SecondSection.sass
@@ -45,7 +45,7 @@
       @media (max-width: 769px)
         font-size: clamp(3rem, -0.7rem + 13vw, 6.25rem)
       & > span 
-        letter-spacing: 0%
+        letter-spacing: -0.001em
       & .line
         width: 8rem
         height: 2px
