--- a/src/components/Soundscape/Soundscape.sass
+++ b/src/components/Soundscape/Soundscape.sass
@@ -70,7 +70,7 @@
       text-transform: uppercase
       line-height: 1
       font-weight: 700
-      letter-spacing: -5%
+      letter-spacing: -0.5rem
       white-space: nowrap
       dominant-baseline: hanging
       @media (max-width: 375px)
