--- a/src/index.css
+++ b/src/index.css
@@ -68,22 +68,22 @@ body::after {
 
 h1 {
   font-size: clamp(4rem, -0.7rem + 14.5vw, 6.9rem);
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;
 }
 
 h2 {
   font-size: clamp(4rem, -0.7rem + 8.3vw, 6.9rem);
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;
 }
 
 h3 {
   font-size: clamp(3rem, -0.7rem + 8.3vw, 6.25rem);
-  letter-spacing: -4%;
+  letter-spacing: -0.04em;
 }
 
 h6 {
   font-size: clamp(2rem, -0.7rem + 8.3vw, 2rem);
-  letter-spacing: -2%;
+  letter-spacing: -0.02em;
   line-height: 120%;
 }
 
